# bad_pswd

./: Cargo.toml  LICENSE  README.md
src/: add.rs  cmds.rs  main.rs
src/cmds/: add.rs  gen.rs  get.rs  pswd_struct.rs  quick_pswd_file.rs  remove.rs
