[package]
name = "bad_pswd"
version = "0.1.0"
authors = ["Xephobia <nathanvalletmarseille@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
base64 = "0.13.0"
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.2"